--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "0.1.0-11",
     "bootstrap": "^4.1.2",
     "i": "^0.3.6",
+    "jest": "^23.4.1",
     "lodash": "^4.17.10",
     "npm": "^6.2.0",
     "react": "^16.4.1",
