--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
-    "bootstrap": "^4.1.2",
+    "bootstrap": "^4.1.3",
     "i": "^0.3.6",
     "lodash": "^4.17.10",
     "npm": "^6.2.0",
     "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
