--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-swipeable": "^4.3.0",
+    "react-widgets": "^4.4.3",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
